# tasan

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_CN.md  comparison_report.md  plan.md
.claude/: context.md
claude-dialog/: 2025-09-02-fix-cmake-build-error.txt  2025-09-02-gitbuild.txt  2025-09-02-refactor.txt  plan_conversation.txt
examples/: CMakeLists.txt  README.md  basic_usage.cpp  heap_overflow_detection.cpp  use_after_free_detection.cpp
include/: CMakeLists.txt
scripts/: build_and_compare.sh
src/: CMakeLists.txt
src/asan/: CMakeLists.txt
